• Load off-site assets and store them locally as data URIs • Serve those data URIs when the game makes requests to the asset URLs it expects • Set access-control-allow-origin header to * for requests made offsite (necessary for vocaroo)

--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -46,7 +46,8 @@
   "permissions": [
     "webRequest",
     "webRequestBlocking",
-    "*://tetris.com/*"
+    "*://tetris.com/*",
+    "*://*.vocaroo.com/*"
   ],
   "version": "0.0.0"
 }
