--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -36,10 +36,10 @@
   ],
   "description": "Play your favorite Sanrio Characters tetromino game with less lag!",
   "icons": {
-    "16": "icons/16.png",
-    "48": "icons/48.png",
-    "96": "icons/96.png",
-    "128": "icons/128.png"
+    "16": "assets/icons/16.png",
+    "48": "assets/icons/48.png",
+    "96": "assets/icons/96.png",
+    "128": "assets/icons/128.png"
   },
   "manifest_version": 2,
   "name": "Tetrominovania",
