--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -42,7 +42,7 @@
     "128": "assets/icons/128.png"
   },
   "manifest_version": 2,
-  "name": "Minimal tetromino.com",
+  "name": "Tetrominovania",
   "permissions": [
     "webRequest",
     "webRequestBlocking",
