No neeed to load game in an iframe

--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -20,7 +20,7 @@
     {
       "all_frames": false,
       "js": [
-        "scripts/content/game-page.js"
+        "scripts/content/game-frame.js"
       ],
       "matches": [
         "*://tetris.com/play-tetris*",
@@ -28,16 +28,7 @@
         "*://tetris.com/madilynbailey*",
         "*://tetris.com/play-tetris-content/index-mobile.php*",
         "*://tetris.com/games-content/sanrio01/index-mobile.php*",
-        "*://tetris.com/play-tetris-content-mb/index-mobile.php*"
-      ],
-      "run_at": "document_start"
-    },
-    {
-      "all_frames": true,
-      "js": [
-        "scripts/content/game-frame.js"
-      ],
-      "matches": [
+        "*://tetris.com/play-tetris-content-mb/index-mobile.php*",
         "*://tetris.com/play-tetris-content/resources/project-tetriscom/game/if_game_html5.php*",
         "*://tetris.com/games-content/sanrio01/resources/project-tetriscom-sanrio01/game/if_game_html5.php*",
         "*://tetris.com/play-tetris-content-mb/resources/project-tetriscom-MB/game/if_game_html5.php*"
