--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -52,7 +52,9 @@
   ],
   "web_accessible_resources": [
     "assets/images/*/*.png",
-    "assets/sounds/*.mp3"
+    "assets/sounds/*.mp3",
+    "scripts/page/load-game.js",
+    "styles/game.css"
   ],
   "version": "0.0.2"
 }
