--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -56,6 +56,5 @@
     "scripts/page/load-game.js",
     "styles/game.css"
   ],
-  "version": "2019.7.14",
-  "version_name": "2019-07-14"
+  "version": "2019.7.14.1"
 }
