--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -8,11 +8,11 @@
     ]
   },
   "browser_action": {
-    "default_title": "Tetrominovania"
+    "default_title": "\u0054\u0065\u0074\u0072\u006f\u006d\u0069\u006e\u006fvania"
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "tetrominovania@protonmail.com",
+      "id": "\u0074\u0065\u0074\u0072\u006f\u006d\u0069\u006e\u006fvania@protonmail.com",
       "strict_min_version": "55.0"
     }
   },
@@ -23,15 +23,12 @@
         "scripts/content/game-frame.js"
       ],
       "matches": [
-        "*://tetris.com/play-tetris*",
-        "*://tetris.com/sanrio*",
-        "*://tetris.com/madilynbailey*",
-        "*://tetris.com/play-tetris-content/index-mobile.php*",
-        "*://tetris.com/games-content/sanrio01/index-mobile.php*",
-        "*://tetris.com/play-tetris-content-mb/index-mobile.php*",
-        "*://tetris.com/play-tetris-content/resources/project-tetriscom/game/if_game_html5.php*",
-        "*://tetris.com/games-content/sanrio01/resources/project-tetriscom-sanrio01/game/if_game_html5.php*",
-        "*://tetris.com/play-tetris-content-mb/resources/project-tetriscom-MB/game/if_game_html5.php*"
+        "*://\u0074\u0065\u0074\u0072\u0069\u0073.com/play-\u0074\u0065\u0074\u0072\u0069\u0073*",
+        "*://\u0074\u0065\u0074\u0072\u0069\u0073.com/madilynbailey*",
+        "*://\u0074\u0065\u0074\u0072\u0069\u0073.com/games-content/play-\u0074\u0065\u0074\u0072\u0069\u0073-content/index-mobile.php*",
+        "*://\u0074\u0065\u0074\u0072\u0069\u0073.com/games-content/play-\u0074\u0065\u0074\u0072\u0069\u0073-content-mb/index-mobile.php*",
+        "*://\u0074\u0065\u0074\u0072\u0069\u0073.com/games-content/play-\u0074\u0065\u0074\u0072\u0069\u0073-content/resources/project-\u0074\u0065\u0074\u0072\u0069\u0073com/game/game-*/if_game_html5.php*",
+        "*://\u0074\u0065\u0074\u0072\u0069\u0073.com/games-content/play-\u0074\u0065\u0074\u0072\u0069\u0073-content-mb/resources/project-\u0074\u0065\u0074\u0072\u0069\u0073com-MB/game/if_game_html5.php*"
       ],
       "run_at": "document_start"
     }
@@ -44,11 +41,11 @@
     "128": "assets/icons/128.png"
   },
   "manifest_version": 2,
-  "name": "Tetrominovania",
+  "name": "\u0054\u0065\u0074\u0072\u006f\u006d\u0069\u006e\u006fvania",
   "permissions": [
     "webRequest",
     "webRequestBlocking",
-    "*://tetris.com/*"
+    "*://\u0074\u0065\u0074\u0072\u0069\u0073.com/*"
   ],
   "web_accessible_resources": [
     "assets/images/*/*.png",
